# stonks-tui

./: Cargo.toml
src/: main.rs  utils.rs
src/utils/: api.rs  app_state.rs  scheme.rs  ui.rs
